@@ -28,6 +28,7 @@
 #include <sys/types.h>
 
 #include <lsp-plug.in/lltl/version.h>
+#include <lsp-plug.in/lltl/spec.h>
 
 namespace lsp
 {
@@ -39,9 +40,16 @@ namespace lsp
         struct raw_parray
         {
             public:
+                typedef     int (* cmp_func_t)(const void *a, const void *b);
+
+            public:
                 size_t      nItems;
                 void      **vItems;
                 size_t      nCapacity;
+
+            protected:
+                static int  closure_cmp(const void *a, const void *b, void *c);
+                static int  raw_cmp(const void *a, const void *b, void *c);
 
             public:
                 void        init();
@@ -82,7 +90,11 @@ namespace lsp
                 void      **iremove(size_t idx, size_t n, raw_parray *cs);
 
                 void       *qremove(size_t idx);
+                void        qsort(cmp_func_t f);
+                void        qsort(sort_closure_t *c);
         };
+
+
 
         /**
          * Data array template
@@ -93,6 +105,9 @@ namespace lsp
                 private:
                     parray(const parray<T> &src);                                   // Disable copying
                     parray<T> & operator = (const parray<T> & src);                 // Disable copying
+
+                public:
+                    typedef int (* cmp_func_t)(const T *a, const T *b);
 
                 private:
                     mutable raw_parray    v;
@@ -269,6 +284,34 @@ namespace lsp
                     inline T **shift_n(size_t n, parray<T> &x)                      { return shift_n(n, &x);                                    }
                     inline T **remove_n(size_t idx, size_t n, parray<T> &x)         { return remove_n(idx, n, &x);                              }
                     inline T **premove_n(const T *ptr, size_t n, parray<T> &x)      { return premove_n(ptr, n, &x);                             }
+
+                public:
+                    // Sorts
+                    inline void qsort(cmp_func_t cmp)                               { v.qsort(reinterpret_cast<raw_parray::cmp_func_t>(cmp));   }
+                    inline void qsort(compare_func_t cmp)
+                    {
+                        sort_closure_t c;
+                        c.compare       = cmp;
+                        c.size          = sizeof(T);
+                        v.qsort(&c);
+                    }
+
+                    inline void qsort(const compare_iface &cmp)
+                    {
+                        sort_closure_t c;
+                        c.compare       = cmp.compare;
+                        c.size          = sizeof(T);
+                        v.qsort(&c);
+                    }
+
+                    inline void qsort()
+                    {
+                        compare_spec<T> spec;
+                        sort_closure_t c;
+                        c.compare       = spec.compare;
+                        c.size          = sizeof(T);
+                        v.qsort(&c);
+                    }
 
                 public:
                     // Operators
