@@ -413,5 +413,34 @@ namespace lsp
 
             return res;
         }
+
+        int raw_darray::closure_cmp(const void *a, const void *b, void *c)
+        {
+            sort_closure_t *sc = static_cast<sort_closure_t *>(c);
+            ssize_t res = sc->compare(a, b, sc->size);
+            return (res > 0) ? 1 : (res < 0) ? -1 : 0;
+        }
+
+        int raw_darray::raw_cmp(const void *a, const void *b, void *c)
+        {
+            cmp_func_t f = reinterpret_cast<cmp_func_t>(c);
+            return f(a, b);
+        }
+
+        void raw_darray::qsort(sort_closure_t *c)
+        {
+            qsort_r(vItems, nItems, nSizeOf, closure_cmp, c);
+        }
+
+        void raw_darray::qsort(cmp_func_t f)
+        {
+            union
+            {
+                cmp_func_t f;
+                void *p;
+            } xf;
+            xf.f = f;
+            ::qsort_r(vItems, nItems, nSizeOf, raw_cmp, xf.p);
+        }
     }
 }
